add-new-templates-cadastro-newtopic

--- a/learning_app/templates/base.html
+++ b/learning_app/templates/base.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <p>
-        <a href="{% url 'learning_app:index' %}">Learning Log</a> -
-        <a href="{% url 'learning_app:topics' %}">Topics</a>
+        <a href="{% url 'learning_app:index' %}">Inicio</a>
+        <a href="{% url 'learning_app:topics' %}">Topic</a>
     </p>
     {% block content %}{% endblock content %}
 </body>
