--- a/learning_app/templates/topics.html
+++ b/learning_app/templates/topics.html
@@ -1,12 +1,13 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
 
 {% block content %}
     <h1>Topics</h1>
     <ul>
         {% for topic in topics %}
-            <li>{{ topic }}</li>
-        {% empty %}
-            <li>No topics have been added yet.</li>
+            <li>
+                <a href="{% url 'learning_app:topic' topic.id %}">{{ topic }}</a>
+            </li>
         {% endfor %}
     </ul>
-{% endblock %}
+    <a href="{% url 'learning_app:new_topic' %}">Add a new topic</a>
+{% endblock content %}
